# cmd/api/users.go
@@ -135,3 +135,36 @@ func getUserFromContext(r *http.Request) *store.User {
 
 	return r.Context().Value(userCtx).(*store.User)
 }
+
+// ActivateUser godoc
+//
+//	@Summary		Activate/Register a user
+//	@Description	Activate/Register a user by invitation token
+//	@Tags			users
+//	@Produce		json
+//	@Param			token	path		string	true	"Invitation token"
+//	@Success		204		{string}	string	"User activated"
+//	@Failure		404		{object}	error
+//	@Failure		500		{object}	error
+//	@Security		ApiKeyAuth
+//	@Router			/users/activate/{token} [put]
+func (app *application) activateUserHandler(w http.ResponseWriter, r *http.Request) {
+	token := chi.URLParam(r, "token")
+
+	err := app.store.Users.Activate(r.Context(), token)
+	if err != nil {
+		switch err {
+		case store.ErrNotFound:
+			app.notFoundResponse(w, r, err)
+		default:
+			app.internalServerError(w, r, err)
+		}
+
+		return
+	}
+
+	if err := app.jsonResponse(w, http.StatusCreated, "User activated"); err != nil {
+		app.internalServerError(w, r, err)
+		return
+	}
+}
