# docs/swagger.yaml
@@ -17,6 +17,21 @@ definitions:
     - password
     - username
     type: object
+  main.userWithToken:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      id:
+        type: integer
+      is_active:
+        type: boolean
+      token:
+        type: string
+      username:
+        type: string
+    type: object
   store.User:
     properties:
       created_at:
@@ -25,6 +40,8 @@ definitions:
         type: string
       id:
         type: integer
+      is_active:
+        type: boolean
       username:
         type: string
     type: object
@@ -59,7 +76,7 @@ paths:
         "201":
           description: User Registered
           schema:
-            $ref: '#/definitions/store.User'
+            $ref: '#/definitions/main.userWithToken'
         "400":
           description: Bad Request
           schema: {}
@@ -121,6 +138,33 @@ paths:
           description: Not Found
           schema: {}
       summary: Follows a user
+      tags:
+      - users
+  /users/activate/{token}:
+    put:
+      description: Activate/Register a user by invitation token
+      parameters:
+      - description: Invitation token
+        in: path
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: User activated
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Activate/Register a user
       tags:
       - users
 securityDefinitions:
